docs/specs/version-2.0-proposed.txt
===========
Version 2.0
===========


Request
-------

Notification
~~~~~~~~~~~~

Parameters
~~~~~~~~~~

Response
--------

Error Object
~~~~~~~~~~~~

Batch/Multicall
---------------

Examples
--------
